--- a/config
+++ b/config
@@ -1,3 +1,8 @@
+# This is a comment
 bind e exit
 bind q exit
 bind o echo test
+bind x spawn "test stuff woo!"
+spawn "nm-applet"
+gaps 3
+outergaps 3
